assets/css/style.css
/* ... */
nav ul a {
    color: white;
}

nav ul a:hover {
    color: rgba(255,255,255,.5);
    text-decoration: none;
}

nav .col {
    padding: 0;
}

nav li .active {
    color: rgba(255,255,255,.5);
    text-decoration: none;
}

nav .row {
    margin-right: 0;
    margin-left: 0;
}

#menubar {
    width: 75vw;
    text-align: right;
}

nav div a:hover {
    color: rgba(255,255,255,.5);
    text-decoration: none;
}

/* ------------------- Text Section Styling */

#textsection, #contactsection 
    {background-image: url(/assets/images/grayscale-photo-of-building-3312304.jpg?raw=true);
        /* credit to https://www.pexels.com/photo/grayscale-photo-of-building-3312304//*/
    background-color: #999999;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100vw;
    text-align: center;
    font-family: 'Cairo', sans-serif;
    min-height: 50vh;
}

#textsection {
    font-family: 'Cairo', sans-serif;
    min-height: 50vh;
}

#textsection p {
    margin: 0;
}

#textsection .row {
    margin-right: 0;
    margin-left: 0;
}

#textsectionmask {
    background-color: rgba(255, 255, 255, .85);
    min-height: 50vh;
}

/* credit to https://css-tricks.com/books/fundamental-css-tactics/scale-typography-screen-size/ 
    and https://www.madebymike.com.au/writing/fluid-type-calc-examples/ 
        for font-size: calc(10px + (48 - 10) * ((100vw - 300px) / (1800 - 300)));*/

.textsmall {
    padding: 6vw 8vw;
    font-size: calc(12px + (24 - 12) * ((100vw - 300px) / 900));
    color: #000000;
    text-align: center;
}

.textxsmall {
    padding: 10vw 8vw 2vw;
    font-size: calc(10px + (28 - 10) * ((100vw - 300px) / 900));
    color: #000000;
}

.textmedium {   
    padding: 2vw 10vw 6vw;
    font-size: calc(15px + (30 - 15) * ((100vw - 300px) / 900));
    color: #101828;
}

.textxmedium {   
    padding: 2vw 10vw;
    font-size: calc(15px + (30 - 15) * ((100vw - 300px) / 900));
    color: #101828;
}

.textlarge, .textlarge h1 {
    padding: 7vw 8vw 5vw;
    text-align: center;
    font-size: calc(20px + (40 - 20) * ((100vw - 300px) / 900));
    font-weight: bold;
    color: #CC613A;
}

/* ------------------- Banner Section Styling */

#bannersection {
    text-align: center;
    font-family: 'Cairo', sans-serif;
}

#bannerouter {
    justify-content: center;
}

.banner {
    padding: 0;
    font-size: calc(17px + (48 - 17) * ((100vw - 300px) / 1066));
    color: #ffffff;
    min-height: calc(80px + (200 - 80) * ((100vw - 300px) / 1066));
    background-color: #CC613A;
}

.align-vertically { /* credit to https://webdevblog.com/css-vertical-align/ */
    display: flex;
    align-items: center;
    justify-content: center;
}

.bannerimage {
    max-height: calc(80px + (200 - 80) * ((100vw - 300px) / 1066));
    max-width: 60vw;
    border: 1px solid transparent;
}

/* ------------------- Accordian Styling */

.accordion {
    font-family: 'Cairo', sans-serif;
}

.card {
    border: none;
    padding: 0;
    text-align: center;
}

.btn {
    font-size: calc(17px + (48 - 17) * ((100vw - 300px) / 1066));
}

.btn-link, .btn-link:hover, btn-link:active, .btn-link:focus {
    color: #ffffff;
    text-decoration: none;
}

.card-header:first-child {
    border-radius: 0;
}

.row {
    margin: 0;
}

.card-body {
    font-size: calc(10px + (48 - 10) * ((100vw - 300px) / 1066));
    padding: 1.25rem 2rem;
}

/* ------------------- Carousel Styling */

.carousel {
    font-family: 'Cairo', sans-serif;
}

.carouselbannerheader {
    text-align: center;
    font-size: calc(16px + (32 - 16) * ((100vw - 300px) / 1066));
    color: #ffffff;
    min-height: 10vh;
    background-color: #CC613A;
}

.carouselbanner {
    padding: 0 12.5vw 0;
    text-align: center;
    font-size: calc(12px + (24 - 12) * ((100vw - 300px) / 1066));
    color: #101828;
    min-height: 20vh;
    background-color: transparent;
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23CC613A' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23CC613A' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
}

/* ------------------- Modal Styling */

.btn-primary {
    border: none;
}

.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:hover, .btn-primary:focus {
    color: rgba(255, 255, 255, .85);
    background-color: #CC613A;
    border: none;
    box-shadow: none;
}

.btn-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-primary.dropdown-toggle:focus {
    box-shadow: none;
}

.btn:focus {
    outline: 0;
    border: none;
    box-shadow: none;
}

.mheadingCenter {
    max-width: 98%;
    margin-left: 1%;
}

.modal-content {
    width: 75vw;
    left: -20vw;
}

/* ------------------- Content Section Styling */

#contentsection {
    font-family: 'Cairo', sans-serif;
    background-color: rgba(255, 255, 255, .75);
}

.content {
    padding: 2vw;
}

.contenttextsmall {
    padding: 6vw 8vw;
    font-size: calc(14px + (28 - 14) * ((100vw - 300px) / 1066));
    color: #101828;
    text-align: center;
}

.contenttextxsmall {
    padding: 4vw 8vw 2vw;
    font-size: calc(14px + (28 - 14) * ((100vw - 300px) / 1066));
    color: #000000;
}

.contenttextlarge {
    padding: 4vw 6vw;
    text-align: center;
    font-size: calc(18px + (36 - 18) * ((100vw - 300px) / 1066));
    font-weight: bold;
    color: #101828;
}

.contentimage {
    max-height: 30vw;
    max-width: 50vw;
}

.align-left {
    text-align: left;
    padding: 3vw 4vw 0vw;
}

.contentbold {
    font-weight: bold;
}

.contenthighlight {
    font-weight: bold;
    color: #CC613A;
}

.carouselimage {
    height: 15vw;
    padding-top: .5vw;
}
/* ... */

